tests/neg/5902.scala
object Main {
  val a = infer[ValueOf[String]] // error
}
